--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,5 +22,8 @@ assert_matches = "1.5.0"
 modinverse = "0.1.0"
 num-bigint = "0.4.0"
 
+[features]
+without-encryption = []
+
 [[example]]
 name = "sum"
